--- a/assets/sass/sass/parts/_parts-slider.scss
+++ b/assets/sass/sass/parts/_parts-slider.scss
@@ -93,10 +93,11 @@
 	.slider__slide{
 		position: relative;
 		flex: 0 0 100%;
-		height: 30vh;
 		margin: 0;
 		padding: 0 2vw;
-		width: 80%;
+		height: 50vw;
+		min-height: 320px;
+		width: 100%;
 		counter-increment: item;
 		list-style: none;
 		scrollbar-width: 0px;
@@ -114,11 +115,42 @@
 		&:focus{
 			outline: none;
 		}
+
 		.slider__snapper {
 			background: #f0f0f0;
 			width: 100%;
 			height: 100%;
 			scroll-snap-align: center;
+			position: relative;
+			overflow: hidden;
+			& > *{
+				@include flex-container(row, wrap, stretch, center);
+				@include justify-content(center);
+				width: 100%;
+				height: 100%;
+			}
+
+			@keyframes fadeIn { /* ←追加 */
+				from {
+					width: 100%;
+					height: 100%
+				}
+				to {
+					width: 108%;
+					height: 108%
+				}
+			}
+			img{
+				object-fit: cover;
+				width: 100%;
+				height: 100%
+			}
+			&:hover{
+				img{
+					animation: 1s fadeIn forwards; /* ←追加 */
+				}
+
+			}
 		}
 		@media (hover: hover) {
 			.carousel__snapper {
@@ -155,17 +187,20 @@
 			bottom: 0;
 			margin: auto 0;
 			height: .32rem;
+			min-height: 44px;
 			width: .32rem;
+			min-width: 44px;
 			text-decoration: none;
 
 			&:hover{
-				border-bottom: 0.04rem $color-border solid;
-				box-shadow: 0 0.02rem 0.04rem $color-border;
+				border-bottom: 0.01rem $color-border solid;
+				box-shadow: 0 0.02rem 0.04rem rgba($color-text , .1);
 				text-decoration: none;
 			}
 			&::before {
 				color: $color-text;
 				@include font-size(16);
+				font-size: .2rem;
 				line-height: 1;
 				@include flex-container(row, wrap, stretch, center);
 				@include justify-content(center);
@@ -227,8 +262,10 @@
 		/*●*/
 		.slider__navi-button {
 			display: inline-block;
-			width: .1rem;
-			height: .1rem;
+			width: 2vw;
+			height: 2vw;
+			min-width: .1rem;
+			min-height: .1rem;
 			background-color: #333;
 			background-clip: content-box;
 			border: .01rem #fff solid;
@@ -240,3 +277,170 @@
 		}
 	}
 }
+
+/* /////////////////////////////////////////// */
+
+$contents-no: 4;
+$dot-size: 1.5vh;
+$dot-size-min: 6px;
+$btn-color: $color-text;
+$btn-color-checked: $color-primary;
+
+.slider {
+	@include flex-container(row, nowrap, flex-start, center);
+	@include justify-content(center);
+	height: 100vh;
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	.slider-btn {
+		width: $dot-size;
+		height: $dot-size;
+		min-width: $dot-size-min;
+		min-height: $dot-size-min;
+		border-radius: 50%;
+		margin: ($dot-size * 1) ($dot-size * 1.5);
+		z-index: 10;
+		border: $btn-color 0.01rem solid;
+		outline: none;
+		background: $btn-color;
+		box-shadow: 0 0 0 0 $btn-color-checked, 0 0 0 0 rgba($btn-color-checked , 0);
+		cursor: pointer;
+		-webkit-appearance: none;
+		 -moz-appearance: none;
+		      appearance: none;
+		-webkit-backface-visibility: hidden;
+		      backface-visibility: hidden;
+	}
+
+	.slider-btn:checked {
+	  -webkit-animation: check 0.5s linear forwards;
+	          animation: check 0.5s linear forwards;
+	}
+
+	@for $i from 1 to $contents-no +1 {
+		$translate: ( -100% * ( ($i - 1) / $contents-no) );
+		.slider-btn:checked:nth-of-type( #{$i} ) ~ .slider-inner {
+			-webkit-transform: translateX($translate);
+			    	transform: translateX($translate);
+		}
+	}
+	.slider-inner {
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		margin-top: auto;
+		margin-bottom: auto;
+		width: 100% * $contents-no;
+		-webkit-transition: all 1s ease-out;
+		transition: all 1s ease-out;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-flex-flow: row nowrap;
+		-ms-flex-flow: row nowrap;
+		  flex-flow: row nowrap;
+	}
+	.slider-contents {
+		height: 100%;
+		line-height: 1.6;
+		padding: ($dot-size * 3) 0 0;
+		position: relative;
+		@include flex(1);
+		@include flex-container(column, nowrap, center, center);
+		overflow-y: hidden;
+	}
+	.slider-contents-img{
+		height: 2rem;
+		margin-bottom: .1rem;
+		position: relative;
+		text-align: center;
+		overflow: hidden;
+		.frame-wrapper__video,
+		img{
+			-o-object-fit: contain;
+				object-fit: contain;/*cover*/
+				width: 100%;
+				height: 100%;
+		}
+	}
+
+	@keyframes check {
+		50% {
+			border: $btn-color 0.01rem solid;
+			background: $btn-color;
+			box-shadow: 0 0 0 12px $btn-color-checked, 0 0 0 36px rgba($btn-color-checked, 0.2);
+			border-radius: 50%;
+		}
+		100% {
+			border: $color-primary 0.01rem solid;
+			background: $btn-color;
+			box-shadow: 0 0 0 0 $btn-color-checked, 0 0 0 0 rgba($btn-color-checked, 0);
+			border-radius: 50%;
+			background: $btn-color-checked;
+		}
+	}
+	.slider-btn__prev,
+	.slider-btn__next{
+		background: #fff;
+		border-radius: 50%;
+		@include font-size(0);
+		@include flex-container(row, wrap, stretch, center);
+		@include justify-content(center);
+		line-height: 0;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		margin: auto 0;
+		height: .32rem;
+		min-height: 32px;
+		width: .32rem;
+		min-width: 32px;
+		text-decoration: none;
+		overflow: hidden;
+		&:hover{
+			border-bottom: 0.01rem $color-border solid;
+			box-shadow: 0 0.02rem 0.04rem rgba($color-text , .1);
+			text-decoration: none;
+		}
+		&::before {
+			color: $color-text;
+			@include font-size(16);
+			font-size: .2rem;
+			line-height: 1;
+			@include flex-container(row, wrap, stretch, center);
+			@include justify-content(center);
+
+			color: #000;
+			font-family: "fontello";
+			font-style: normal;
+			font-weight: normal;
+			speak: none;
+			text-decoration: inherit;
+			font-variant: normal;
+			-webkit-font-smoothing: antialias;
+			text-transform: none;
+			height: .32rem;
+			outline: 0;
+			text-decoration: none;
+			width: .32rem;
+		}
+	}
+	.slider-btn__prev {
+		left: 0;
+		&::before {
+			@include icon-font('\f104');
+		}
+	}
+	.slider-btn__next {
+		right: 0;
+		&::before {
+			@include icon-font('\f105');
+			margin: 0 0 0 0.024rem;
+		}
+	}
+}
+
+
